Refactor ImageUtil and RandomProjectionUtils for improved readability and consistency